--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://localhost/</site.url>
+        <site.url>http://energaz.by</site.url>
         <browser.name>firefox</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
@@ -77,27 +77,27 @@
       </activation>
     </profile>
     <profile>
-      <id>dev</id>
+      <id>local_chrome</id>
       <properties>
         <env>dev</env>
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://devhost/</site.url>
-        <browser.name>firefox</browser.name>
+        <site.url>http://energaz.by/</site.url>
+        <browser.name>chrome</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
-      <id>test</id>
+      <id>local_ie</id>
       <properties>
         <env>test</env>
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://testhost/</site.url>
-        <browser.name>firefox</browser.name>
+        <site.url>http://energaz.by/</site.url>
+        <browser.name>internet explorer</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
       </properties>
