--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://energaz.by</site.url>
+        <site.url>http://172.17.151.21:7001/console</site.url>
         <browser.name>firefox</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
@@ -83,7 +83,7 @@
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://energaz.by/</site.url>
+        <site.url>http://172.17.151.21:7001/console/</site.url>
         <browser.name>chrome</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
@@ -96,7 +96,7 @@
         <user.username></user.username>
         <user.password></user.password>
         <grid2.hub></grid2.hub>
-        <site.url>http://energaz.by/</site.url>
+        <site.url>http://172.17.151.21:7001/console/</site.url>
         <browser.name>internet explorer</browser.name>
         <browser.version></browser.version>
         <browser.platform></browser.platform>
